libbackuppc-xs-perl (0.62-1) UNRELEASED; urgency=medium

  * Import new upstream release 0.62.

 -- Axel Beckert <abe@debian.org>  Wed, 01 Jul 2020 03:43:01 +0200

libbackuppc-xs-perl (0.59-1) unstable; urgency=medium

  * Import new upstream version 0.59.
  * Declare compliance with Debian Policy 4.4.0. (No changes needed.)
  * Bump debhelper compatibility level to 12.
    + Replace debian/compat with a versioned b-d on debhelper-compat.

 -- Axel Beckert <abe@debian.org>  Sat, 31 Aug 2019 14:59:45 +0200

libbackuppc-xs-perl (0.57-2) unstable; urgency=medium

  * debian/copyright: Update FSF URL by following redirect from
    http://fsf.org to https://www.fsf.org/. Thanks DUCK!
  * Mark binary package as "Multi-Arch: same" as suggested by the
    multiarch hinter.

 -- Axel Beckert <abe@debian.org>  Sat, 17 Nov 2018 06:02:35 +0100

libbackuppc-xs-perl (0.57-1) unstable; urgency=medium

  * Adopt package under the Debian BackupPC Team. (Closes: #887491)
    + Add Tobias Frost and myself to Uploaders.
  * Add Vcs-* headers.
  * Drop uupdate from debian/watch and switch to version 4.
  * Apply "wrap-and-sort -a".
  * Convert to source format "3.0 (quilt)".
  * Import new upstream release 0.57.
    + Refresh patch.
  * Switch to compat level 11 and drop --with autotools-dev.
    + Update build-dependencies accordingly.
  * Add Homepage field.
  * Fix file name typos found by lintian in debian/copyright.
  * Fix unused lintian override by dropping the whole
    debian/libbackuppc-xs-perl.lintian-overrides file.
  * Rewrite package description to describe the Perl module BackupPC::XS
    and not BackupPC itself.
  * Declare compliance with Debian Policy 4.2.1. (No changes needed.)
  * debian/copyright: Use "GPL-3+" instead of "GPL-3" as short name for
    "GPL version 3 or later".
  * Enable all hardening build flags.
  * Declare package to be autopkgtestable.

 -- Axel Beckert <abe@debian.org>  Thu, 15 Nov 2018 02:56:57 +0100
